--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-slideshow-image": "^4.0.4",
+    "react-spinners": "^0.13.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6"
   }
 }
